[project]
name = "include-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["poe-test-helpers"]

[tool.poe]
include_script = [
  "tasks:tasks1",
  { script = "tasks:tasks1(task_suffix='-again')", executor = "simple" },
  "include_scripts:tasks2",
  { script = "tasks:tasks1(task_suffix='-more')", executor = { type = "virtualenv", location = ".venv" }, cwd = "src" },
]

[tool.uv.sources]
poe-test-helpers = { path = "../packages/poe_test_helpers" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
