[tool.poetry]
name        = "poethepoet_plugin"
version     = "0.1.0"
description = "A project that uses poetry as a plugin."
authors     = ["Nat Noordanus <n@natn.me>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
cowsay = "3.0"

[tool.poe.poetry_hooks]
pre_env_info = "echo 'THIS IS YOUR ENV!'"
post_env_info = "echo 'THAT WAS YOUR ENV!'"

[tool.poe.tasks]
echo = { cmd = "echo", help = "It's like echo"}
cow-greet = "cowsay 'good day sir!'"
cow-cheese.shell = "import cowsay ;print(cowsay.char_names[1])"
cow-cheese.interpreter = "python"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
