[project]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = [{ name = "Nat Noordanus", email = "n@noordan.us" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
executor = { type = "poetry" }

[tool.poe.tasks]

test-poetry-run-options.cmd = "python -c \"print('poetry run options test')\""
test-poetry-run-options.executor = { type = "poetry", run_options = [
  "--no-ansi",
] }
