[tool.poetry]
name = "scripts-project"
version = "0.1.0"
description = "scripts-project"
authors = ["Nat Noordanus <n@natn.me>"]

packages = [
  { include = "scripts_pkg" }
]

[tool.poe]
default_task_type = "script"
default_array_item_task_type = "cmd"

[tool.poe.tasks]
greet = "scripts_pkg:main"

# Interpret subtasks as cmd instead of ref
composite_task = ["echo Hello", "echo World!"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
