[tool.poetry]
name        = "poethepoet_plugin"
version     = "0.1.0"
description = "A project that uses poetry as a plugin."
authors     = ["Nat Noordanus <n@natn.me>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
cowsay = "../../packages/python_cowsay-1.0.1-py3-none-any.whl"

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
echo = { cmd = "poe_test_echo", help = "It's like echo"}
cow-greet = "cowsay 'good day sir!'"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
