[tool.poetry]
name        = "poethepoet_plugin"
version     = "0.1.0"
description = "A project that uses poetry as a plugin."
authors     = ["Nat Noordanus <n@natn.me>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
cowpy = { path = "../../packages/cowpy-1.1.5-py3-none-any.whl" }
poe_test_helpers = { path = "../../packages/poe_test_helpers" }

[tool.poe]
poetry_command = ""
include = "tasks.toml"

[tool.poe.tasks]
echo = { cmd = "poe_test_echo", help = "It's like echo"}
cow-greet = "cowpy 'good day sir!'"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
